<resources>
    <string name="app_name">ListViewDicoding</string>
    <string name="player_name">Name</string>
    <string name="player_nationality">Nationality</string>
    <string name="player_position">Position</string>
    <string name="player_number">Number</string>
    <string name="player_comment">Comment</string>
    <string name="player_photo">Photo</string>

    <string name="author_name">Rachmawan Atmaji Perdana</string>
    <string name="author_email">themusketeer17@gmail.com</string>
</resources>
