<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">
    
    <ImageView
        android:id="@+id/img_photo_player"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_photo_player"
        android:layout_toRightOf="@id/img_photo_player"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/player_name"/>
        <TextView
            android:id="@+id/tv_player_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            tools:text="@string/player_nationality"
            android:maxLines="1" />
        <TextView
            android:id="@+id/tv_player_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/player_position"
            android:ellipsize="end"
            android:maxLines="1" />
        <TextView
            android:id="@+id/tv_player_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/player_number"
            android:ellipsize="end"
            android:maxLines="1" />
    </LinearLayout>

</RelativeLayout>