<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PlayerDetailActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="2dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/tv_player_photo_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_photo"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.02">

                <TextView
                    android:id="@+id/tv_player_photo_colon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text=":"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.73">

                <ImageView
                    android:id="@+id/imgView_player_photo_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="2dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/tv_player_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_name"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.02">

                <TextView
                    android:id="@+id/tv_player_name_colon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text=":"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.73">

                <TextView
                    android:id="@+id/tv_player_name_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="14dp" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="2dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/tv_player_position_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_position"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.02">

                <TextView
                    android:id="@+id/tv_player_position_colon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text=":"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.73">

                <TextView
                    android:id="@+id/tv_player_position_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="14dp" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="2dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/tv_player_nationality_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_nationality"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.02">

                <TextView
                    android:id="@+id/tv_player_nationality_colon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text=":"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.73">

                <TextView
                    android:id="@+id/tv_player_nationality_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="14dp" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="2dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/tv_player_number_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_number"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.02">

                <TextView
                    android:id="@+id/tv_player_number_colon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text=":"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.73">

                <TextView
                    android:id="@+id/tv_player_number_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="14dp" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="2dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/tv_player_comment_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_comment"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.02">

                <TextView
                    android:id="@+id/tv_player_comment_colon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text=":"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.73">

                <TextView
                    android:id="@+id/tv_player_comment_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="14dp" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>